@@ -15,6 +15,7 @@ hildon-home (0.3.13~unreleased) unstable; urgency=low
           NB#97364, NB#100499
         * Fix Potential crash in hd-system-notifications.c (progress bar
           pulsing). Fixes: NB#102472
+        * Optimize image handling in bookmark shortcuts. Fixes: NB#102307
 
  -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Wed, 11 Feb 2009 09:19:38 +0200
 
